--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
 
 <head>
   <meta charset="utf-8">
@@ -16,7 +16,7 @@
   
   <!-- Fontawesome icons -->
   <script src="https://kit.fontawesome.com/165f277f42.js" crossorigin="anonymous"></script>
-
+  
   <!-- Bootstrap jquery scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
@@ -49,6 +49,7 @@
       </nav>
 
       <!-- Title -->
+
       <div id="title-text" class="row">
         <div class="col-lg-6">
           <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
